[gd_scene load_steps=23 format=3 uid="uid://b8jv3d0p6f8c0"]

[ext_resource type="Theme" uid="uid://bnvbwu202rx6u" path="res://assets/theme/default.tres" id="1_hk23w"]
[ext_resource type="Script" path="res://src/control.gd" id="2_egbqx"]
[ext_resource type="PackedScene" uid="uid://btjv6kteur8ff" path="res://src/navbar/navbar.tscn" id="3_iv05c"]
[ext_resource type="PackedScene" uid="uid://2dfuv5bk0ahw" path="res://src/toolbar/toolbar.tscn" id="4_7tfkl"]
[ext_resource type="PackedScene" uid="uid://dkkj62x4hs764" path="res://src/adjustment/adjustment_tool.tscn" id="5_cd782"]
[ext_resource type="PackedScene" uid="uid://bpb81qqyhhoab" path="res://src/rulers/h_ruler.tscn" id="6_nmtuf"]
[ext_resource type="Shader" path="res://src/shaders/TransparentChecker.gdshader" id="7_eo0uy"]
[ext_resource type="Shader" path="res://src/shaders/Greyscale.gdshader" id="8_rxagw"]
[ext_resource type="PackedScene" uid="uid://bw43bipa0o2mv" path="res://src/components/colorpalette/color_palette.tscn" id="9_igahc"]
[ext_resource type="PackedScene" uid="uid://cnv2wo1wwsfyu" path="res://src/components/opt-selection/selection.tscn" id="10_m4bfb"]
[ext_resource type="Script" path="res://src/timeline/LayerFuncButton.gd" id="10_uaanb"]
[ext_resource type="Texture2D" uid="uid://do5d6ttn322c5" path="res://assets/icons/unlock.png" id="10_utbxl"]
[ext_resource type="PackedScene" uid="uid://d2jmndg28bimn" path="res://src/components/opt-pencil/pencil.tscn" id="11_gpkqv"]
[ext_resource type="Texture2D" uid="uid://1tbvgkny8w7s" path="res://assets/icons/unlink.png" id="11_moh5h"]
[ext_resource type="PackedScene" uid="uid://codf6k0w3eg3b" path="res://src/components/opt-shape/shape.tscn" id="12_54orb"]
[ext_resource type="PackedScene" uid="uid://co7ihfd12up3b" path="res://src/components/opt-zoom/zoom.tscn" id="13_2sjc7"]
[ext_resource type="PackedScene" uid="uid://cbuijs3m885d6" path="res://src/components/opt-crop/crop.tscn" id="14_coayu"]
[ext_resource type="PackedScene" uid="uid://dbsb1l7cp4rg7" path="res://src/components/opt-eraser/eraser.tscn" id="15_mjhfc"]
[ext_resource type="PackedScene" uid="uid://cih65rgsgsl3u" path="res://src/components/opt-fill/fill.tscn" id="16_4iq6d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u122j"]
shader = ExtResource("7_eo0uy")
shader_parameter/size = 10.0
shader_parameter/alpha = 1.0
shader_parameter/color1 = Color(0.7, 0.7, 0.7, 1)
shader_parameter/color2 = Color(1, 1, 1, 1)
shader_parameter/offset = Vector2(0, 0)
shader_parameter/scale = Vector2(0, 0)
shader_parameter/rect_size = Vector2(0, 0)
shader_parameter/follow_movement = false
shader_parameter/follow_scale = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ib7er"]
shader = ExtResource("8_rxagw")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gnnm1"]
shader = ExtResource("7_eo0uy")
shader_parameter/size = 10.0
shader_parameter/alpha = 1.0
shader_parameter/color1 = Color(0.7, 0.7, 0.7, 1)
shader_parameter/color2 = Color(1, 1, 1, 1)
shader_parameter/offset = Vector2(0, 0)
shader_parameter/scale = Vector2(0, 0)
shader_parameter/rect_size = Vector2(0, 0)
shader_parameter/follow_movement = false
shader_parameter/follow_scale = false

[node name="Control" type="Control"]
custom_minimum_size = Vector2(800, 480)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hk23w")
script = ExtResource("2_egbqx")

[node name="main_area" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Navbar" parent="main_area" instance=ExtResource("3_iv05c")]
layout_mode = 2

[node name="mainborad" type="PanelContainer" parent="main_area"]
layout_mode = 2
size_flags_vertical = 3

[node name="workspace" type="HBoxContainer" parent="main_area/mainborad"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="left-sider" type="PanelContainer" parent="main_area/mainborad/workspace"]
layout_mode = 2
theme_type_variation = &"sider_left"

[node name="Toolbar" parent="main_area/mainborad/workspace/left-sider" instance=ExtResource("4_7tfkl")]
layout_mode = 2
size_flags_vertical = 1

[node name="canvas" type="VBoxContainer" parent="main_area/mainborad/workspace"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="funcbar" type="PanelContainer" parent="main_area/mainborad/workspace/canvas"]
layout_mode = 2
theme_type_variation = &"funcbar"

[node name="split" type="HBoxContainer" parent="main_area/mainborad/workspace/canvas/funcbar"]
layout_mode = 2

[node name="Tabbar" type="TabBar" parent="main_area/mainborad/workspace/canvas/funcbar/split"]
layout_mode = 2
size_flags_horizontal = 3
tab_close_display_policy = 2
tab_count = 3
tab_0/title = "Untitled"
tab_1/title = "asdfdf"
tab_2/title = "test"
tab_2/disabled = true

[node name="Adjustment" parent="main_area/mainborad/workspace/canvas/funcbar/split" instance=ExtResource("5_cd782")]
layout_mode = 2

[node name="HRuler" parent="main_area/mainborad/workspace/canvas" instance=ExtResource("6_nmtuf")]
layout_mode = 2
focus_mode = 0

[node name="VSplitContainer" type="VSplitContainer" parent="main_area/mainborad/workspace/canvas"]
layout_mode = 2
size_flags_vertical = 3

[node name="draw" type="HBoxContainer" parent="main_area/mainborad/workspace/canvas/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VRuler" type="Button" parent="main_area/mainborad/workspace/canvas/VSplitContainer/draw"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
flat = true

[node name="DrawContainer" type="SubViewportContainer" parent="main_area/mainborad/workspace/canvas/VSplitContainer/draw"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DrawViewport" type="SubViewport" parent="main_area/mainborad/workspace/canvas/VSplitContainer/draw/DrawContainer"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(360, 360)
render_target_update_mode = 4

[node name="Background" type="ColorRect" parent="main_area/mainborad/workspace/canvas/VSplitContainer/draw/DrawContainer/DrawViewport"]
visible = false
material = SubResource("ShaderMaterial_u122j")
mouse_filter = 2

[node name="Canvas" type="Node2D" parent="main_area/mainborad/workspace/canvas/VSplitContainer/draw/DrawContainer/DrawViewport"]
visible = false

[node name="Camera2D" type="Camera2D" parent="main_area/mainborad/workspace/canvas/VSplitContainer/draw/DrawContainer/DrawViewport"]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="main_area/mainborad/workspace/canvas/VSplitContainer/draw/DrawContainer/DrawViewport"]
visible = false

[node name="GreyscaleVision" type="ColorRect" parent="main_area/mainborad/workspace/canvas/VSplitContainer/draw/DrawContainer/DrawViewport/CanvasLayer"]
visible = false
material = SubResource("ShaderMaterial_ib7er")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="timeline" type="VBoxContainer" parent="main_area/mainborad/workspace/canvas/VSplitContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Panel" type="Panel" parent="main_area/mainborad/workspace/canvas/VSplitContainer/timeline"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="main_area/mainborad/workspace/canvas/VSplitContainer/timeline"]
layout_mode = 2
size_flags_vertical = 3

[node name="layer-panel" type="VBoxContainer" parent="main_area/mainborad/workspace/canvas/VSplitContainer/timeline/ScrollContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="split" type="HSplitContainer" parent="main_area/mainborad/workspace/canvas/VSplitContainer/timeline/ScrollContainer/layer-panel"]
layout_mode = 2
size_flags_vertical = 3

[node name="labels" type="VBoxContainer" parent="main_area/mainborad/workspace/canvas/VSplitContainer/timeline/ScrollContainer/layer-panel/split"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="main_area/mainborad/workspace/canvas/VSplitContainer/timeline/ScrollContainer/layer-panel/split/labels"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
text = "Layers"
horizontal_alignment = 1
vertical_alignment = 1

[node name="layer" type="Panel" parent="main_area/mainborad/workspace/canvas/VSplitContainer/timeline/ScrollContainer/layer-panel/split/labels"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="row" type="HBoxContainer" parent="main_area/mainborad/workspace/canvas/VSplitContainer/timeline/ScrollContainer/layer-panel/split/labels/layer"]
layout_mode = 2
offset_right = 200.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="BtnLock" type="Button" parent="main_area/mainborad/workspace/canvas/VSplitContainer/timeline/ScrollContainer/layer-panel/split/labels/layer/row"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
icon = ExtResource("10_utbxl")
icon_alignment = 1
script = ExtResource("10_uaanb")

[node name="holder" type="VSeparator" parent="main_area/mainborad/workspace/canvas/VSplitContainer/timeline/ScrollContainer/layer-panel/split/labels/layer/row"]
layout_mode = 2

[node name="Label" type="Label" parent="main_area/mainborad/workspace/canvas/VSplitContainer/timeline/ScrollContainer/layer-panel/split/labels/layer/row"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Layers"
vertical_alignment = 1
text_overrun_behavior = 3

[node name="holder2" type="VSeparator" parent="main_area/mainborad/workspace/canvas/VSplitContainer/timeline/ScrollContainer/layer-panel/split/labels/layer/row"]
layout_mode = 2

[node name="BtnLink" type="Button" parent="main_area/mainborad/workspace/canvas/VSplitContainer/timeline/ScrollContainer/layer-panel/split/labels/layer/row"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
icon = ExtResource("11_moh5h")
icon_alignment = 1
script = ExtResource("10_uaanb")

[node name="BtnVisible" type="Button" parent="main_area/mainborad/workspace/canvas/VSplitContainer/timeline/ScrollContainer/layer-panel/split/labels/layer/row"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
icon_alignment = 1
script = ExtResource("10_uaanb")
triggered = true

[node name="contents" type="VBoxContainer" parent="main_area/mainborad/workspace/canvas/VSplitContainer/timeline/ScrollContainer/layer-panel/split"]
layout_mode = 2

[node name="framebar" type="HBoxContainer" parent="main_area/mainborad/workspace/canvas/VSplitContainer/timeline/ScrollContainer/layer-panel/split/contents"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="FrameBtn" type="Button" parent="main_area/mainborad/workspace/canvas/VSplitContainer/timeline/ScrollContainer/layer-panel/split/contents/framebar"]
clip_contents = true
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
theme_type_variation = &"framebtn"
text = "1"

[node name="frames" type="HBoxContainer" parent="main_area/mainborad/workspace/canvas/VSplitContainer/timeline/ScrollContainer/layer-panel/split/contents"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="FrameBtn" type="TextureButton" parent="main_area/mainborad/workspace/canvas/VSplitContainer/timeline/ScrollContainer/layer-panel/split/contents/frames"]
material = SubResource("ShaderMaterial_gnnm1")
clip_contents = true
custom_minimum_size = Vector2(36, 30)
layout_mode = 2
theme_type_variation = &"framebtn"

[node name="right-sider" type="PanelContainer" parent="main_area/mainborad/workspace"]
layout_mode = 2
theme_type_variation = &"sider_right"

[node name="split" type="VSplitContainer" parent="main_area/mainborad/workspace/right-sider"]
layout_mode = 2

[node name="Preview" type="Panel" parent="main_area/mainborad/workspace/right-sider/split"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="split" type="VSplitContainer" parent="main_area/mainborad/workspace/right-sider/split"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorPalette" parent="main_area/mainborad/workspace/right-sider/split/split" instance=ExtResource("9_igahc")]
layout_mode = 2
size_flags_vertical = 1

[node name="Panel" type="Panel" parent="main_area/mainborad/workspace/right-sider/split/split"]
layout_mode = 2
size_flags_vertical = 3

[node name="scroll" type="ScrollContainer" parent="main_area/mainborad/workspace/right-sider/split/split/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="margin" type="MarginContainer" parent="main_area/mainborad/workspace/right-sider/split/split/Panel/scroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Selection" parent="main_area/mainborad/workspace/right-sider/split/split/Panel/scroll/margin" instance=ExtResource("10_m4bfb")]
visible = false
layout_mode = 2

[node name="Pencil" parent="main_area/mainborad/workspace/right-sider/split/split/Panel/scroll/margin" instance=ExtResource("11_gpkqv")]
visible = false
layout_mode = 2

[node name="Shape" parent="main_area/mainborad/workspace/right-sider/split/split/Panel/scroll/margin" instance=ExtResource("12_54orb")]
visible = false
layout_mode = 2

[node name="Zoom" parent="main_area/mainborad/workspace/right-sider/split/split/Panel/scroll/margin" instance=ExtResource("13_2sjc7")]
visible = false
layout_mode = 2

[node name="Crop" parent="main_area/mainborad/workspace/right-sider/split/split/Panel/scroll/margin" instance=ExtResource("14_coayu")]
visible = false
layout_mode = 2

[node name="Eraser" parent="main_area/mainborad/workspace/right-sider/split/split/Panel/scroll/margin" instance=ExtResource("15_mjhfc")]
visible = false
layout_mode = 2

[node name="Fill" parent="main_area/mainborad/workspace/right-sider/split/split/Panel/scroll/margin" instance=ExtResource("16_4iq6d")]
layout_mode = 2

[node name="overlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.133333, 0.133333, 0.784314)

[connection signal="navigation_to" from="main_area/Navbar" to="." method="_on_navigation_to"]
[connection signal="active_tool" from="main_area/mainborad/workspace/left-sider/Toolbar" to="." method="_on_active_tool"]
[connection signal="active_adjust_tool" from="main_area/mainborad/workspace/canvas/funcbar/split/Adjustment" to="." method="_on_active_adjust_tool"]
[connection signal="modal_toggled" from="main_area/mainborad/workspace/right-sider/split/split/ColorPalette" to="." method="_on_modal_toggled"]
